--- a/DnD.csproj
+++ b/DnD.csproj
@@ -60,13 +60,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ClassesBin\Classes.cs" />
+    <Compile Include="ClassesBin\ClassStats.cs" />
     <Compile Include="ClassesBin\ClassLog.cs" />
-    <Compile Include="RacesBin\Race.cs" />
+    <Compile Include="Manager\FrameManager.cs" />
+    <Compile Include="MapList.xaml.cs">
+      <DependentUpon>MapList.xaml</DependentUpon>
+    </Compile>
     <Compile Include="RacesBin\RacesLog.cs" />
     <Compile Include="RacesBin\RaceStats.cs" />
     <Compile Include="Stats\AllVariable.cs" />
-    <Compile Include="ClassesBin\ClassStats.cs" />
     <Compile Include="Stats\Stats.cs" />
     <Compile Include="Stats\UnderStats.cs" />
     <Compile Include="ClassesBin\UpParam.cs" />
@@ -91,6 +93,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MapList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
