--- a/DnD.csproj
+++ b/DnD.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>DnD</RootNamespace>
     <AssemblyName>DnD</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+	  <LangVersion>12.0</LangVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -66,6 +67,7 @@
     <Compile Include="MapList.xaml.cs">
       <DependentUpon>MapList.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Player\Gamer.cs" />
     <Compile Include="RacesBin\RacesLog.cs" />
     <Compile Include="RacesBin\RaceStats.cs" />
     <Compile Include="Stats\AllVariable.cs" />
